experimental vectorized set ops (#125)
* experimental vectorized set ops

* update ci.yaml

* compile-clj fix